--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   <button id="logout-btn" style="margin-top:30px; background-color: #641dbb;">تسجيل الخروج</button>
 </div>
 
-<div class="footer">© 2025 مصرف جنى - تطوير بواسطة ChatGPT</div>
+<div class="footer">© 2025 مصرف جنى - تطوير بواسطة عناد الحربي</div>
 
 <script>
 (() => {
