--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
   const GIST_DESCRIPTION = 'Janna Bank Database';
   
   // استبدل هذه القيم بمعلوماتك الخاصة
-  const GITHUB_TOKEN = ''; // أنشئ token من GitHub مع صلاحية gist
+  const GITHUB_TOKEN = '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'; // أنشئ token من GitHub مع صلاحية gist
   const GIST_ID = ''; // اتركه فارغاً ليتم إنشاؤه تلقائياً
 
   let db;
