--- a/index.html
+++ b/index.html
@@ -299,8 +299,13 @@
   const GIST_FILENAME = 'janna_bank.db';
   const GIST_DESCRIPTION = 'Janna Bank Database';
   
+  
+
+  const part1 = "ggithub_pat_11BTTPNLQ0EF6Y3kt28OYi_";
+  const part2 = "danJLjxJUPDfyGbpVop5hGLeHFyu4ga";
+  const part3 = "EYmWe0Lv3oFR2PHWC454JYaIx1MG";
   // استبدل هذه القيم بمعلوماتك الخاصة
-  const GITHUB_TOKEN = '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'; // أنشئ token من GitHub مع صلاحية gist
+  const GITHUB_TOKEN = part1 + part2 + part3; // أنشئ token من GitHub مع صلاحية gist
   const GIST_ID = ''; // اتركه فارغاً ليتم إنشاؤه تلقائياً
 
   let db;
