--- a/index.html
+++ b/index.html
@@ -5,69 +5,140 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>استبيان بسيط</title>
     <style>
+        :root {
+            --primary-color: #3498db;
+            --dark-color: #1a1a2e;
+            --darker-color: #16213e;
+            --light-color: #f5f5f5;
+            --text-color: #333;
+            --text-light: #f0f0f0;
+        }
+
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
             margin: 0;
             padding: 20px;
-            color: #333;
+            background-color: var(--dark-color);
+            color: var(--text-light);
+            transition: all 0.3s ease;
         }
+
         .container {
             max-width: 600px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            margin: 20px auto;
+            background-color: var(--darker-color);
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
         }
+
         h1 {
-            color: #2c3e50;
+            color: var(--primary-color);
             text-align: center;
+            margin-bottom: 30px;
         }
+
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
+
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             font-weight: bold;
+            color: var(--primary-color);
         }
+
         input, select, textarea {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+            padding: 12px;
+            border: 2px solid #444;
+            border-radius: 6px;
             box-sizing: border-box;
+            background-color: #2a2a3c;
+            color: var(--text-light);
+            transition: border 0.3s;
         }
+
+        input:focus, select:focus, textarea:focus {
+            border-color: var(--primary-color);
+            outline: none;
+        }
+
         button {
-            background-color: #3498db;
+            background-color: var(--primary-color);
             color: white;
             border: none;
-            padding: 10px 15px;
-            border-radius: 4px;
+            padding: 12px 20px;
+            border-radius: 6px;
             cursor: pointer;
             font-size: 16px;
+            width: 100%;
+            transition: background-color 0.3s;
         }
+
         button:hover {
             background-color: #2980b9;
         }
+
         #message {
-            margin-top: 20px;
-            padding: 10px;
-            border-radius: 4px;
+            margin-top: 25px;
+            padding: 15px;
+            border-radius: 6px;
             display: none;
+            text-align: center;
         }
+
         .success {
             background-color: #d4edda;
             color: #155724;
         }
+
         .error {
             background-color: #f8d7da;
             color: #721c24;
         }
+
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: var(--primary-color);
+            color: white;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 1000;
+        }
+
+        /* الثيم الفاتح */
+        body.light-theme {
+            background-color: var(--light-color);
+            color: var(--text-color);
+        }
+
+        body.light-theme .container {
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        body.light-theme input,
+        body.light-theme select,
+        body.light-theme textarea {
+            background-color: white;
+            color: var(--text-color);
+            border-color: #ddd;
+        }
+
+        body.light-theme label {
+            color: var(--text-color);
+        }
     </style>
 </head>
 <body>
+    <button class="theme-toggle" id="themeToggle">تبديل الثيم</button>
+
     <div class="container">
         <h1>استبيان بسيط</h1>
         <form id="surveyForm">
