--- a/index.html
+++ b/index.html
@@ -1,64 +1,138 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>جارٍ التحميل...</title>
     <style>
+        /* استدعاء خطوط النظام (macOS, Windows, Android) */
         body {
-            background-color: #1a1a2e;
-            color: #f0f0f0;
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
             margin: 0;
+            height: 100vh;
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            color: #e0e0e0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+                Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            direction: rtl;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            user-select: none;
         }
 
+        /* خلفية قاتمة شفافة للنافذة */
         #popup {
-            background-color: #fff;
-            color: #333;
-            border-radius: 10px;
-            padding: 30px;
+            position: fixed;
+            top: 0; right: 0; bottom: 0; left: 0;
+            background: rgba(10, 10, 10, 0.85);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.4s ease;
+        }
+
+        /* تفعيل ظهور النافذة */
+        #popup.active {
+            opacity: 1;
+            pointer-events: all;
+        }
+
+        /* صندوق النافذة */
+        #popup > div {
+            background: #121418;
+            padding: 40px 35px;
+            border-radius: 18px;
+            box-shadow: 0 20px 60px rgba(20, 20, 30, 0.7);
             max-width: 400px;
+            width: 90%;
             text-align: center;
-            box-shadow: 0 0 15px rgba(0,0,0,0.5);
-            display: none;
+            color: #f0f0f5;
+            font-weight: 600;
+            font-size: 1.15rem;
+            letter-spacing: 0.04em;
+            position: relative;
+            transform: translateY(-30px);
+            animation: popupIn 0.4s forwards cubic-bezier(0.23, 1, 0.32, 1);
+            box-sizing: border-box;
+            user-select: text;
         }
 
-        #popup h2 {
-            margin-bottom: 15px;
-            color: #c0392b;
-        }
-
+        /* عناوين النص داخل النافذة */
         #popup p {
-            font-size: 16px;
+            margin: 0.4em 0;
+            font-weight: 600;
+            line-height: 1.4;
+            color: #f44336; /* لون أحمر مميز */
+            text-shadow: 0 0 8px #f44336aa;
+        }
+
+        /* الايميل بخط ثابت ولون مغاير */
+        #popup p.email {
+            color: #82aaff;
+            font-weight: 700;
+            font-family: 'SF Mono', Consolas, "Liberation Mono", Menlo, monospace;
+            font-size: 1rem;
+            margin-top: 15px;
+            direction: ltr;
+            user-select: all;
+            cursor: text;
+            text-shadow: 0 0 6px #82aaffcc;
+        }
+
+        /* حركة ظهور النافذة */
+        @keyframes popupIn {
+            0% {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* استجابة للجوال */
+        @media (max-width: 480px) {
+            #popup > div {
+                padding: 30px 20px;
+                font-size: 1rem;
+                max-width: 90vw;
+                border-radius: 14px;
+            }
+            #popup p.email {
+                font-size: 0.9rem;
+            }
         }
     </style>
 </head>
 <body>
-<div id="popup" style="
-    display: none;
-    position: fixed;
-    top: 0; right: 0; bottom: 0; left: 0;
-    background: rgba(0,0,0,0.8);
-    color: white;
-    font-family: Arial, sans-serif;
-    font-size: 20px;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999;
-    text-align: center;
-    padding: 30px;
-">
-    <div style="background:#222; padding: 30px; border-radius: 15px; max-width: 400px;">
-        <p style="margin: 0;">تعذر فتح الموقع</p>
-        <p style="margin: 5px 0;">يرجى التواصل مع عناد الحربي لحل المشكلة</p>
-        <p style="margin: 0; direction: ltr;">e508769103@gmail.com</p>
+
+<div id="popup" role="alert" aria-live="assertive" aria-atomic="true">
+    <div>
+        <p>تعذر فتح الموقع</p>
+        <p>يرجى التواصل مع عناد الحربي لحل المشكلة</p>
+        <p class="email" tabindex="0">SNAPCHAT | qdp_u</p>
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-    <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script src="script.js"></script>
+
+<script>
+    // مثال بسيط لإظهار النافذة بفخامة عند الحاجة (تستدعى من سكربتك)
+    function showPopup() {
+        const popup = document.getElementById("popup");
+        popup.classList.add("active");
+    }
+
+    // هنا فقط للتجربة، يمكنك حذفها أو تعديلها حسب سكربتك
+    // setTimeout(showPopup, 2000);
+</script>
+
 </body>
 </html>
