--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
 
 <div id="popup" role="alert" aria-live="assertive" aria-atomic="true">
     <div>
-        <p>تعذر فتح الموقع</p>
-        <p>يرجى التواصل مع عناد الحربي لحل المشكلة</p>
-        <p class="email" tabindex="0">e508769103@gmail.com</p>
+        <p>ليس مصرح لك بالدخول</p>
+        <p>يمكنك طلب تصريح الان عبر</p>
+        <p class="email" tabindex="0">enadalharbi@app.com
+        </p>
     </div>
 </div>
 
