--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 
 <div id="popup" role="alert" aria-live="assertive" aria-atomic="true">
     <div>
-        <p>ليس مصرح لك بالدخول</p>
-        <p>يمكنك طلب تصريح الان عبر</p>
-        <p class="email" tabindex="0">enadalharbi@app.com
+        <p>وضع الصيانة</p>
+        <p>يقوم فريقنا الان بمحاولة اصلاح خطا تقني , يرجى المحاولة لاحقا</p>
+        <p class="email" tabindex="0">Made by @ enadalharbi
         </p>
     </div>
 </div>
