--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div>
         <p>وضع الصيانة</p>
         <p>يقوم فريقنا الان بمحاولة اصلاح خطا تقني , يرجى المحاولة لاحقا</p>
-        <p class="email" tabindex="0">Made by @ enadalharbi
+        <p class="email" tabindex="0">عـنـاد الحـربـي
         </p>
     </div>
 </div>
