--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
   <header>
     <div class="container">
-      <h1><img src="assets/logo.png" alt="logo" style="height:40px; vertical-align:middle;"> منصة العرض</h1>
+      <h1><img src="assets/logo.png" alt="logo" style="height:40px; vertical-align:middle;"> عِناد للأفلام والمسلسلات </h1>
       <nav>
         <a href="index.html">الرئيسية</a>
         <a href="login.html">دخول</a>
